--- a/Example/PressableView/Base.lproj/Main.storyboard
+++ b/Example/PressableView/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="vXZ-lx-hvc">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -20,8 +20,35 @@
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qmd-Hd-2pY" customClass="PressableView" customModule="PressableView">
+                                <rect key="frame" x="107" y="304" width="161" height="59"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Press me!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H9F-NP-lg1">
+                                        <rect key="frame" x="36" y="17" width="89.5" height="25.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.18823529410000001" green="0.30196078430000001" blue="0.42745098040000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="H9F-NP-lg1" firstAttribute="centerX" secondItem="Qmd-Hd-2pY" secondAttribute="centerX" id="KUN-85-Wcm"/>
+                                    <constraint firstAttribute="height" secondItem="H9F-NP-lg1" secondAttribute="height" multiplier="2.3" id="LCe-TV-l6A"/>
+                                    <constraint firstAttribute="width" secondItem="H9F-NP-lg1" secondAttribute="width" multiplier="1.8" id="iNV-6Q-WLo"/>
+                                    <constraint firstItem="H9F-NP-lg1" firstAttribute="centerY" secondItem="Qmd-Hd-2pY" secondAttribute="centerY" id="xFw-Q7-K6U"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="Qmd-Hd-2pY" firstAttribute="centerY" secondItem="kh9-bI-dsS" secondAttribute="centerY" id="K5R-fl-FBm"/>
+                            <constraint firstItem="Qmd-Hd-2pY" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="lKg-5H-dN7"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="button" destination="Qmd-Hd-2pY" id="4BV-Wc-inx"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
