--- a/Example/PressableView/Base.lproj/Main.storyboard
+++ b/Example/PressableView/Base.lproj/Main.storyboard
@@ -38,6 +38,9 @@
                                     <constraint firstAttribute="width" secondItem="H9F-NP-lg1" secondAttribute="width" multiplier="1.8" id="iNV-6Q-WLo"/>
                                     <constraint firstItem="H9F-NP-lg1" firstAttribute="centerY" secondItem="Qmd-Hd-2pY" secondAttribute="centerY" id="xFw-Q7-K6U"/>
                                 </constraints>
+                                <connections>
+                                    <action selector="buttonPressed" destination="vXZ-lx-hvc" eventType="touchUpInside" id="Nj8-LX-u9c"/>
+                                </connections>
                             </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
